Adds the ability to save emojis to dynamo
